--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2061,3 +2061,36 @@ ul.sub-menu.submenu-grid li a {
 .fixed-bg {
   background-attachment: fixed;
 }
+
+section.nuestros-clientes {
+  background-color: #f8f8f8;
+}
+
+.nuestros-clientes {
+  padding: 50px 0;
+
+  h3 {
+    color: $anclaRed;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 32px;
+    margin-bottom: 30px;
+    margin-top: 0;
+  }
+}
+
+.container-clients {
+  text-align: center;
+}
+
+.client {
+
+  display: inline-block;
+  width: calc((100% / 5) - 20px);
+  padding: 0 20px;
+
+  img {
+    max-width: 100%;
+    border-radius: 15px;
+  }
+}
