--- a/sass/main.scss
+++ b/sass/main.scss
@@ -250,6 +250,7 @@ a.open-menu {
       font-size: 26px;
       text-align: right;
       display: none;
+      z-index: 5;
     }
 
     @include media(">desktop") {
@@ -278,6 +279,12 @@ footer {
       color: #ebebeb;
       font-size: 26px;
     }
+
+    ul {
+      padding: 0;
+      margin: 0;
+    }
+
     li {
       float: left;
       list-style: outside none none;
@@ -311,11 +318,17 @@ footer {
     &[type="text"] {
       width: 75%;
       background: transparent;
+      @include media("<=phone") {
+        width: 100%;
+      }
     }
 
     &[type="submit"] {
       width: 25%;
       background-color: $anclaRed;
+      @include media("<=phone") {
+        width: 100%;
+      }
     }
   }
 
@@ -666,16 +679,58 @@ body.page.woocommerce-page .site-content {
       color: #ececec;
       text-transform: uppercase;
       z-index:1;
+
+      @include media("<=phone") {
+        font-size: 18px;
+      }
     }
+
+    @include media("<=992px") {
+      opacity: 1;
+    }
+
+  }
+
+  @include media("<=992px") {
+    height: 260px;
+    background-color: rgba(193,40,45,1);
+  }
+
+  @include media("<=phone") {
+    height: 165px;
   }
 }
 
-.woocommerce div.product.product-category:not(:last-child) {
-  margin-bottom: 25px;
-}
+//.woocommerce div.product.product-category:not(:last-child) {
+//  margin-bottom: 25px;
+//}
 
 .iso-cats {
   position: relative;
+
+  @include media("<=desktop") {
+    height: auto !important;
+  }
+
+  .subcat-item {
+    @include media("<=desktop") {
+      width: 50% !important;
+      position: relative !important;
+      float: left;
+      top: 0 !important;
+      height: 300px !important;
+      left: 0 !important;
+      overflow: hidden;
+
+      &:last-child:not(:nth-child(even)) {
+        width: 100% !important;
+      }
+    }
+    @include media("<=phone") {
+      width: 100% !important;
+      height: 190px !important;
+    }
+  }
 
   .subcat-item img {
     width: 100%;
@@ -2156,6 +2211,10 @@ a.post-category {
       font-size: 18px;
       margin: -25px 0 0;
       padding: 0 0 10px;
+    }
+
+    @include media("<=phone") {
+      max-width: 80%;
     }
   }
 }
