--- a/sass/_covers.scss
+++ b/sass/_covers.scss
@@ -29,7 +29,9 @@
       font-size: 60px;
 
       @include media("<desktop") {
-        font-size: 40px;
+        label {
+          font-size: 40px;
+        }
       }
 
       @include media("<=tablet") {
@@ -38,6 +40,9 @@
 
       @include media("<=425px") {
         font-size: 30px;
+        label {
+          font-size: 30px;
+        }
       }
 
     }
