--- a/sass/_preloader.scss
+++ b/sass/_preloader.scss
@@ -36,6 +36,10 @@
     right: 10px;
   }
 
+  @include media("<=tablet") {
+    display: none !important;
+  }
+
   &.fixed {
     position: fixed;
     right: 80px;
