--- a/sass/_covers.scss
+++ b/sass/_covers.scss
@@ -30,7 +30,7 @@
 
       @include media("<desktop") {
         label {
-          font-size: 40px;
+          font-size: 40px !important;
         }
       }
 
@@ -82,7 +82,7 @@ body.home .cover {
     height: 60vh;
   }
 
-  @include media("height<=700px") {
+  @include media("height>=700px") {
     height: 60vh;
   }
 
