--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -17,8 +17,15 @@ footer {
     li {
       float: left;
       list-style: outside none none;
+      text-align: center;
       img {
-        width: 44px;
+        width: 60px;
+      }
+      span {
+        display: block;
+        color: #ebebeb;
+        font-size: 10px;
+        margin-top: 10px;
       }
       @include media("<=tablet") {
         float: none;
@@ -91,9 +98,33 @@ footer {
 }
 
 // LEGAL
-.legal {
+.legal,
+.footer-contact {
   color: #8e8e8e;
-  text-align: center;
+  text-align: left;
   font-style: italic;
   padding: 15px 0;
+
+  a {
+    color: #8e8e8e;
+
+    &:hover {
+      color: $anclaRed;
+    }
+  }
+}
+
+.footer-contact ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+
+  li {
+    display: inline-block;
+  }
+
+  li:not(:last-child) {
+    content: '-';
+    margin-left: 10px;
+  }
 }
