--- a/sass/_covers.scss
+++ b/sass/_covers.scss
@@ -91,7 +91,7 @@ body.home .cover {
     height: 60vh;
   }
 
-  @include media("height>=1200px") {
+  @include media(">=1200px") {
     height: 90vh;
   }
 
