--- a/sass/_covers.scss
+++ b/sass/_covers.scss
@@ -49,9 +49,9 @@
     }
 
     p.cover-desc {
-      width: 70%;
+      width: 85%;
       float: left;
-      text-align: left;
+      text-align: justify;
       font-size: 18px;
       line-height: 1;
 
@@ -87,11 +87,11 @@ body.home .cover {
     height: 64vh;
   }
 
-  @include media("height>=700px") {
-    height: 60vh;
-  }
+  //@include media("height>=700px") {
+  //  height: 60vh;
+  //}
 
-  @include media(">=1200px") {
+  @include media(">=1200px", "height>=700px") {
     height: 90vh;
   }
 
