--- a/sass/main.scss
+++ b/sass/main.scss
@@ -97,6 +97,13 @@ span.red {
   }
 }
 
+.contact-data {
+  ul {
+    list-style-type: none;
+    padding: 0;
+  }
+}
+
 .fixed-bg {
   background-attachment: fixed;
 }
