--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -53,6 +53,11 @@ article.post {
     }
   }
 
+  .link-to > a {
+    color: #c1282d;
+    font-size: 17px;
+  }
+
   .post-meta {
     margin-top: 10px;
     font-size: 16px;
