--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -34,6 +34,11 @@ body.page.woocommerce-page header {
   background-color: $headerAndFooterBg;
 }
 
+body.page-template-find-box-game header {
+  position: relative;
+  background-color: $headerAndFooterBg;
+}
+
 // TOP BAR
 .top-bar {
   background-color: #fff;
