--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -18,7 +18,7 @@ footer {
       float: left;
       list-style: outside none none;
       text-align: center;
-      margin: 10px;
+      margin: 10px 5px;
       img {
         width: 60px;
       }
