--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -43,6 +43,11 @@ footer {
 // NEWSLETTER
 .newsletter {
 
+  h4 {
+    color: #ebebeb;
+    font-size: 26px;
+  }
+
   form {
     border: 1px solid #fff;
   }
@@ -73,6 +78,44 @@ footer {
   @include media("<=tablet") {
     width: 80%;
     margin: 15px auto 0;
+  }
+}
+
+.social {
+  margin-top: 20px;
+
+  & > span {
+    display: inline-block;
+    font-size: 20px;
+    color: #ebebeb;
+    vertical-align: middle;
+  }
+}
+
+.social-icons {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+  vertical-align: middle;
+
+  li {
+    display: inline-block;
+    margin: 0 5px;
+  }
+
+  a {
+    display: block;
+    color: #ebebeb;
+    font-size: 22px;
+    width: 22px;
+    height: 22px;
+    line-height: 22px;
+    text-align: center;
+
+    &:hover {
+      color: $anclaRed;
+    }
   }
 }
 
