--- a/sass/_banners.scss
+++ b/sass/_banners.scss
@@ -112,13 +112,13 @@
 }
 
 // Remove styles from iphone and ipad
-
-#content .slick-slider .slick-list,
-#content .slick-track,
-#content .slick-slide,
-#content .slick-slide img {
-  -webkit-transform: initial;
-  -moz-transform: initial;
-  -ms-transform: initial;
-  -o-transform: initial;
-}
+//
+//#content .slick-slider .slick-list,
+//#content .slick-track,
+//#content .slick-slide,
+//#content .slick-slide img {
+//  -webkit-transform: initial;
+//  -moz-transform: initial;
+//  -ms-transform: initial;
+//  -o-transform: initial;
+//}
