--- a/sass/_banners.scss
+++ b/sass/_banners.scss
@@ -34,6 +34,11 @@
     text-align: center;
     margin: 0;
 
+    a {
+      color: #fff;
+      text-decoration: underline;
+    }
+
     span {
       margin-left:30px;
     }
