--- a/sass/main.scss
+++ b/sass/main.scss
@@ -74,7 +74,7 @@ body {
 @import "preloader";
 @import "blog";
 @import "sidebar";
-@import "clients";
+@import "customers";
 @import "pagination";
 @import "box_game";
 
