--- a/sass/_box_game.scss
+++ b/sass/_box_game.scss
@@ -28,6 +28,18 @@
         padding-left: 60px;
       }
     }
+
+    @include media("<=992px") {
+      display: none;
+    }
+
+    &.current-step-li {
+      @include media("<=992px") {
+        width: 100%;
+        display: block;
+      }
+    }
+
   }
 
   a {
@@ -38,7 +50,7 @@
     border-bottom: 2px solid $anclaRed;
     background-color: #fff;
     display: block;
-    padding: 10px 45px;
+    padding: 10px 53px;
     font-size: 16px;
     font-weight: 500;
 
@@ -63,6 +75,15 @@
   border-right: 2px solid $anclaRed;
   position: relative;
   height: 200px;
+
+  @include media("<=970px") {
+    height: 325px;
+  }
+
+  @include media("<=480px") {
+    height: 505px;
+  }
+
 }
 
 .step {
@@ -81,6 +102,12 @@
     //  visibility: visible;
     //  opacity: 1;
     //}
+  }
+
+  .row {
+    @include media("<=480px") {
+      display: block !important;
+    }
   }
 }
 
@@ -113,6 +140,22 @@
     display: inline-block;
     vertical-align: middle;
   }
+
+  @include media("<=970px") {
+    width: 25%;
+    margin-top: 15px;
+  }
+
+  @include media("<=600px") {
+    width: 33.333333%;
+  }
+
+  @include media("<=480px") {
+    width: 50%;
+    margin: 0 !important;
+    margin-top: 15px !important;
+  }
+
 }
 
 .box-game-footer {
