--- a/sass/_box_game.scss
+++ b/sass/_box_game.scss
@@ -74,14 +74,14 @@
 .box-game-body {
   border-right: 2px solid $anclaRed;
   position: relative;
-  height: 450px;
+  height: 380px;
 
   @include media("<=970px") {
-    height: 700px;
+    height: 650px;
   }
 
   @include media("<=480px") {
-    height: 1010px;
+    height: 980px;
   }
 
 }
@@ -133,6 +133,9 @@
     margin: 0;
     display: inline-block;
     vertical-align: middle;
+    @include media("<=480px") {
+      font-size: 9px;
+    }
   }
 
   input[type='checkbox'] {
