--- a/sass/_forms.scss
+++ b/sass/_forms.scss
@@ -3,19 +3,72 @@
 /*************************************/
 
 .form-circle-box .form-control,
-.ccf-form .form-control {
+.ccf-form .form-control,
+.wpcf7-form input {
   background: #ececec none repeat scroll 0 0;
   border: medium none;
   border-radius: 10px;
   color: #999999;
+  font-weight: 400;
+
+  &[type="text"],
+  &[type="email"] {
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+  }
+
+  &[type="submit"] {
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+  }
+
+}
+
+.wpcf7-form label {
+  width: 100%;
+}
+
+.wpcf7-form p {
+  margin-top: 10px;
 }
 
 .ccf-form .ccf-submit-button {
   float: right;
 }
 
+.wpcf7-form select {
+  background: #ececec none repeat scroll 0 0;
+  border: medium none;
+  border-radius: 10px;
+  color: #999;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  display: block;
+  font-weight: 400;
+}
+
+.wpcf7-form textarea {
+  background: #ececec none repeat scroll 0 0;
+  border: medium none;
+  border-radius: 10px;
+  color: #999;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  width: 100%;
+  font-weight: 400;
+}
+
 button.btn-red,
-.ccf-submit-button {
+.ccf-submit-button,
+.wpcf7-form-control.wpcf7-submit {
   background: $anclaRed none repeat scroll 0 0;
   border-radius: 25px;
   color: #ffffff;
