--- a/sass/_products.scss
+++ b/sass/_products.scss
@@ -523,7 +523,7 @@ ul.category-actions {
   width: 33.33333333%;
 }
 
-.col-xs-6.col-md-3.bg-img.product-category.product {
+.col-xs-6.col-md-3.bg-img.product-category.product.first {
   display: none;
 }
 
