Update styles on checkout
Update styles on checkout

--- a/sass/_store.scss
+++ b/sass/_store.scss
@@ -149,3 +149,8 @@ p.cart-empty {
   color: $anclaRed;
   font-weight: 500;
 }
+
+div#my_custom_checkout_field {
+  margin-left: 20px;
+  margin-top: 1px;
+}
