--- a/sass/main.scss
+++ b/sass/main.scss
@@ -169,3 +169,13 @@ div#signup-content {
   @extend .wrapper;
   width: 1170px;
 }
+
+#my_checkbox_field {
+  span {
+    margin-left: 20px;
+  }
+
+  input#my_checkbox {
+    margin: 6px 0px 0px 0px;
+  }
+}
