--- a/sass/_products.scss
+++ b/sass/_products.scss
@@ -524,5 +524,12 @@ ul.category-actions {
 .woocommerce .woocommerce-result-count {
   margin: 0;
 }
-
+.category-svg{
+  text-align: center;
+  margin: 50px 0 30px;
+  padding: 0 100px;
+  img{
+    margin: 0 auto 40px;
+  }
+}
 
