--- a/sass/_products.scss
+++ b/sass/_products.scss
@@ -532,4 +532,11 @@ ul.category-actions {
     margin: 0 auto 40px;
   }
 }
-
+.content-services{
+  text-align: center;
+}
+.service{
+  p{
+    font-size: 20px;
+  }
+}
