--- a/sass/_products.scss
+++ b/sass/_products.scss
@@ -532,9 +532,9 @@ ul.category-actions {
   }
 }
 .content-services{
-  text-align: center;
-}
-.service{
+  .wpb_row{
+    text-align: center;
+  }
   p{
     font-size: 20px;
   }
