--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,8 +6,8 @@
 $headerFontColor: #BBBFC2;
 $headerAndFooterBg: #2b2b2a;
 $anclaRed: #c1282d;
-$anclaRedTranslucid: rgba(193,40,45,0.8);
-$headerAndFooterBgWTransparency: rgba(43,43,42,0.8);
+$anclaRedTranslucid: rgba(193, 40, 45, 0.8);
+$headerAndFooterBgWTransparency: rgba(43, 43, 42, 0.8);
 
 /*************************************/
 /*************** FONTS ***************/
@@ -18,21 +18,25 @@ $headerAndFooterBgWTransparency: rgba(43,43,42,0.8);
   src: url('../fonts/ProximaNova-Regular.otf') format("truetype");
   font-weight: 400;
 }
+
 @font-face {
   font-family: ProximaNova;
   src: url('../fonts/ProximaNova-Light_0.otf') format("truetype");
   font-weight: 300;
 }
+
 @font-face {
   font-family: ProximaNova;
   src: url('../fonts/ProximaNova-Semibold.otf') format("truetype");
   font-weight: 500;
 }
+
 @font-face {
   font-family: ProximaNova;
   src: url('../fonts/ProximaNova-Bold.otf') format("truetype");
   font-weight: 600;
 }
+
 /*************************************/
 /*************** MIXINS **************/
 /*************************************/
@@ -53,8 +57,8 @@ body {
 
 .bg-img {
   background-position: 50% 50%;
-  -webkit-background-size:cover;
-  background-size:cover;
+  -webkit-background-size: cover;
+  background-size: cover;
 }
 
 @import "media_queries";
@@ -106,10 +110,10 @@ span.red {
     list-style-type: none;
     padding: 0;
   }
-  li{
+  li {
     margin: 20px 0;
   }
-  svg{
+  svg {
     vertical-align: middle;
   }
 }
@@ -178,17 +182,24 @@ div#signup-content {
 }
 
 #optin {
-  h3 { display: none;}
-  span {  margin-left: 20px;  }
-  input.input-checkbox {  margin: 6px 0px 0px 0px; }
+  h3 {
+    display: none;
+  }
+  span {
+    margin-left: 20px;
+  }
+  input.input-checkbox {
+    margin: 6px 0px 0px 0px;
+  }
 }
-.Contact{
-  label{
+
+.Contact {
+  label {
     font-size: 18px;
     font-weight: normal;
     margin-bottom: 4px;
   }
-  select{
+  select {
     width: 100%;
   }
   input[type="submit"] {
@@ -198,4 +209,25 @@ div#signup-content {
     line-height: 1.5;
     width: 100%;
   }
+}
+
+.video-page {
+  display: flex;
+  margin-top: 40px;
+  .loginform input {
+    display: block;
+  }
+  iframe {
+    max-width: 100%;
+  }
+}
+
+@media (min-width: 500px) {
+  .video-page-1, .video-page-2 {
+    width: 100%;
+  }
+}
+
+.video-page-1, .video-page-2 {
+  width: 50%;
 }
