cenefas en precios

--- a/sass/_products.scss
+++ b/sass/_products.scss
@@ -556,7 +556,7 @@ ul.category-actions {
     text-decoration: none;
   }
 }
-.sale{
+article.sale{
   position: relative;
   overflow: hidden;
   &:before{
